--- a/Regular/300 H/Group 1/group_list.html
+++ b/Regular/300 H/Group 1/group_list.html
@@ -46,6 +46,16 @@
           </tr>
     
         </tbody>
+
+        <tbody>
+          <tr>
+            <td>5201040701</td>
+            <td>Ofori Amanfo Johnson</td>
+            <td>Johnsonofori98@gmail.com</td>
+            <td>0550833757</td>
+          </tr>
+    
+        </tbody>
     </table>
   </body>
 </html>
