--- a/Regular/300 H/Group 1/group_list.html
+++ b/Regular/300 H/Group 1/group_list.html
@@ -56,6 +56,16 @@
           </tr>
     
         </tbody>
+
+        <tbody>
+          <tr>
+            <td>5201040710</td>
+            <td>Solomon Atopreke</td>
+            <td>solomonnanaatops@gmail.com</td>
+            <td>0545971079</td>
+          </tr>
+    
+        </tbody>
     </table>
   </body>
 </html>
