--- a/Regular/300 H/Group 1/group_list.html
+++ b/Regular/300 H/Group 1/group_list.html
@@ -70,7 +70,7 @@
         <tbody>
           <tr>
             <td>5201040705</td>
-            <td>Richard Sarkodie</td>
+            <td>Richard sarkodie</td>
             <td>richardsarkodie2019@gmail.com</td>
             <td>0598432073</td>
           </tr>
