--- a/Regular/300 H/Group 1/group_list.html
+++ b/Regular/300 H/Group 1/group_list.html
@@ -66,6 +66,15 @@
           </tr>
     
         </tbody>
+        <tbody>
+          <tr>
+            <td>5201040702</td>
+            <td>EBENEZER ACHEAMPONG</td>
+            <td>acheampong.ebenezer24@gmail.com</td>
+            <td>0541353789</td>
+          </tr>
+    
+        </tbody>
     </table>
   </body>
 </html>
